@@ -5,51 +5,49 @@ import lombok.*;
 import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.UpdateTimestamp;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Builder
-@Data
-@NoArgsConstructor
-@AllArgsConstructor
 @Entity
 @Table(name = "activity")
+@Getter
+@Setter
+@NoArgsConstructor(access = AccessLevel.PROTECTED)
+@AllArgsConstructor(access = AccessLevel.PRIVATE)
+@Builder(access = AccessLevel.PRIVATE)
 public class Activity {
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
+    // ──────────────── Core ────────────────
     @Column(name = "title", nullable = false)
     private String title;
 
     @Column(name = "description", columnDefinition = "TEXT")
     private String description;
 
-    @Column(name = "scheduled_at")
-    private LocalDateTime scheduledAt;
-
-    @Column(name = "duration_minutes")
-    private Integer durationMinutes;
-
+    // ──────────────── Relationships ────────────────
     @ManyToOne(fetch = FetchType.LAZY, optional = false)
     @JoinColumn(name = "user_id", nullable = false)
-    @ToString.Exclude
-    @EqualsAndHashCode.Exclude
     private User user;
 
-    @ManyToOne(fetch = FetchType.LAZY, optional = false)
-    @JoinColumn(name = "category_id", nullable = false)
-    @ToString.Exclude
-    @EqualsAndHashCode.Exclude
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "category_id")
     private Category category;
 
-    @OneToMany(mappedBy = "activity", cascade = CascadeType.ALL, fetch = FetchType.LAZY, orphanRemoval = true)
+    @OneToMany(mappedBy = "activity", cascade = CascadeType.ALL, orphanRemoval = true)
     @Builder.Default
     private List<PomodoroSession> sessions = new ArrayList<>();
 
+    // ──────────────── State ────────────────
+    @Column(name = "is_deleted", nullable = false)
+    @Builder.Default
+    private boolean isDeleted = false;
+
+    // ──────────────── Timestamps ────────────────
     @CreationTimestamp
     @Column(name = "created_at", updatable = false)
     private LocalDateTime createdAt;
@@ -58,210 +56,80 @@ public class Activity {
     @Column(name = "updated_at")
     private LocalDateTime updatedAt;
 
-    @Column(name = "is_deleted", nullable = false)
-    @Builder.Default
-    private boolean isDeleted = false;
+    // ──────────────── Factory ────────────────
+    protected static Activity create(String title, String description, User user, Category category) {
+        if (title == null || title.trim().isEmpty())
+            throw new IllegalArgumentException("Activity createActivityTitle cannot be null or empty");
+        if (user == null)
+            throw new IllegalArgumentException("User cannot be null");
 
-    // Domain methods for Pomodoro activity management
+        return Activity.builder()
+                .title(title.trim())
+                .description(description != null ? description.trim() : null)
+                .user(user)
+                .category(category)
+                .build();
+    }
 
-    /**
-     * Rename this activity.
-     * Domain operation for updating activity title.
-     */
-    public void rename(String newTitle) {
-        if (newTitle == null || newTitle.trim().isEmpty()) {
-            throw new IllegalArgumentException("Activity title cannot be null or empty");
-        }
+    // ──────────────── Domain Behavior ────────────────
+    protected void updateDetails(String newTitle, String newDescription, Category newCategoryId) {
+        ensureActive();
+        if (newTitle != null && !newTitle.isBlank())
+            updateTitle(newTitle);
+
+        if (newDescription != null)
+            updateDescription(newDescription);
+
+        if (newCategoryId != null)
+            updateCategory(newCategoryId);
+    }
+
+    protected void updateTitle(String newTitle) {
         this.title = newTitle.trim();
     }
 
-    /**
-     * Update activity description.
-     * Allows users to add context or goals for this activity.
-     */
-    public void updateDescription(String newDescription) {
-        this.description = newDescription;
+    private void updateDescription(String newDescription) {
+        this.description = newDescription.isBlank() ? null : newDescription.trim();
     }
 
-    /**
-     * Schedule this activity for a specific date/time.
-     * Useful for planning when to work on this activity.
-     */
-    public void scheduleFor(LocalDateTime scheduledAt) {
-        this.scheduledAt = scheduledAt;
+    private void updateCategory(Category newCategory) {
+        this.category = newCategory;
     }
 
-    /**
-     * Clear the schedule for this activity.
-     */
-    public void clearSchedule() {
-        this.scheduledAt = null;
-    }
-
-    /**
-     * Set estimated total duration for this activity in minutes.
-     * Helps users plan how much time they expect to spend.
-     */
-    public void setEstimatedDuration(Integer durationMinutes) {
-        if (durationMinutes != null && durationMinutes <= 0) {
-            throw new IllegalArgumentException("Duration must be positive");
-        }
-        this.durationMinutes = durationMinutes;
-    }
-
-    // Pomodoro session management methods
-
-    /**
-     * Add a new Pomodoro session to this activity.
-     * Maintains bidirectional relationship consistency.
-     */
-    public void addSession(PomodoroSession session) {
-        if (session == null) {
-            throw new IllegalArgumentException("Session cannot be null");
-        }
+    public void addPomodoroSession(PomodoroSession session) {
+        ensureActive();
+        if (session == null)
+            throw new IllegalArgumentException("Pomodoro session cannot be null");
         sessions.add(session);
         session.setActivity(this);
     }
 
-    /**
-     * Get all active (non-deleted) Pomodoro sessions for this activity.
-     */
+    public void removePomodoroSession(PomodoroSession session) {
+        ensureActive();
+        if (session == null)
+            throw new IllegalArgumentException("Pomodoro session cannot be null");
+        sessions.remove(session);
+        session.setActivity(null);
+    }
+
+    public Activity delete(Long id) {
+        if (!this.id.equals(id))
+            throw new IllegalArgumentException("Activity ID mismatch");
+
+        ensureActive();
+        this.setDeleted(true);
+        return this;
+    }
+
     public List<PomodoroSession> getActiveSessions() {
         return sessions.stream()
                 .filter(PomodoroSession::isActive)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Get all completed Pomodoro sessions for this activity.
-     */
-    public List<PomodoroSession> getCompletedSessions() {
-        return sessions.stream()
-                .filter(PomodoroSession::isActive)
-                .filter(PomodoroSession::isCompleted)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Get sessions completed today for this activity.
-     */
-    public List<PomodoroSession> getSessionsCompletedToday() {
-        return sessions.stream()
-                .filter(PomodoroSession::isActive)
-                .filter(PomodoroSession::isCompletedToday)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Count total completed sessions for this activity.
-     */
-    public long countCompletedSessions() {
-        return sessions.stream()
-                .filter(PomodoroSession::isActive)
-                .filter(PomodoroSession::isCompleted)
-                .count();
-    }
-
-    /**
-     * Calculate total time spent on this activity (sum of all completed session durations).
-     */
-    public long getTotalTimeSpentMinutes() {
-        return sessions.stream()
-                .filter(PomodoroSession::isActive)
-                .filter(PomodoroSession::isCompleted)
-                .mapToLong(PomodoroSession::getTotalDurationMinutes)
-                .sum();
-    }
-
-    /**
-     * Calculate total Pomodoro cycles completed for this activity.
-     */
-    public int getTotalCyclesCompleted() {
-        return sessions.stream()
-                .filter(PomodoroSession::isActive)
-                .filter(PomodoroSession::isCompleted)
-                .mapToInt(PomodoroSession::getCyclesCompleted)
-                .sum();
-    }
-
-    /**
-     * Check if there's a session currently in progress for this activity.
-     */
-    public boolean hasSessionInProgress() {
-        return sessions.stream()
-                .anyMatch(PomodoroSession::isInProgress);
-    }
-
-    /**
-     * Get the current session in progress, if any.
-     */
-    public PomodoroSession getCurrentSession() {
-        return sessions.stream()
-                .filter(PomodoroSession::isInProgress)
-                .findFirst()
-                .orElse(null);
-    }
-
-    // Activity status methods
-
-    /**
-     * Check if this activity is active (not soft-deleted).
-     */
-    public boolean isActive() {
-        return !isDeleted;
-    }
-
-    /**
-     * Check if this activity is scheduled.
-     */
-    public boolean isScheduled() {
-        return scheduledAt != null && !isDeleted;
-    }
-
-    /**
-     * Check if this activity is scheduled for today.
-     */
-    public boolean isScheduledForToday() {
-        if (scheduledAt == null || isDeleted) {
-            return false;
-        }
-        return scheduledAt.toLocalDate().isEqual(LocalDate.now());
-    }
-
-    /**
-     * Check if this activity is scheduled for a future date.
-     */
-    public boolean isScheduledForFuture() {
-        if (scheduledAt == null || isDeleted) {
-            return false;
-        }
-        return scheduledAt.isAfter(LocalDateTime.now());
-    }
-
-    /**
-     * Check if this activity is overdue (scheduled in the past).
-     */
-    public boolean isOverdue() {
-        if (scheduledAt == null || isDeleted) {
-            return false;
-        }
-        LocalDateTime now = LocalDateTime.now();
-        return scheduledAt.isBefore(now) && !scheduledAt.toLocalDate().isEqual(now.toLocalDate());
-    }
-
-    public int getTotalFocusTimeMinutes() {
-        return sessions.stream()
-                .filter(PomodoroSession::isActive)
-                .filter(PomodoroSession::isCompleted)
-                .mapToInt(PomodoroSession::getFocusTimeMinutes)
-                .sum();
-    }
-
-    public int getTotalBreakTimeMinutes() {
-        return sessions.stream()
-                .filter(PomodoroSession::isActive)
-                .filter(PomodoroSession::isCompleted)
-                .mapToInt(session -> session.getBreakDurationMinutes() * session.getCyclesCompleted())
-                .sum();
+    // ──────────────── Guards ────────────────
+    private void ensureActive() {
+        if (isDeleted)
+            throw new IllegalStateException("Activity is deleted and cannot be modified");
     }
 }
